# nixconfigs

./: .gitignore  CODESPACES.md  QUICKREF.md  README.md  fix-permissions.sh  flake.nix  home.nix  install.sh  nix.conf.example
.devcontainer/: devcontainer.json  setup.sh
.github/: CI-GUIDE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: test-devshells.sh
.github/workflows/: ci.yml  format.yml
dev-envs/: CPP-GUIDE.md  PYTHON-GUIDE.md  README.md  bsv.nix  chisel.nix  cpp.nix  go.nix  nodejs.nix  python.nix  rust.nix  systemverilog.nix
devShells/: README.md
devShells/bsv/: Makefile  flake.nix
devShells/bsv/bsv_src/: Top.bsv
devShells/chisel/: .gitignore  Makefile  README.md  build.mill  flake.nix
devShells/chisel/verilator_csrc/: sim_main.cc
devShells/chisel/your_package_name/src/: Elaborate.scala  YourMain.scala
devShells/chisel/your_package_name/test/src/: YourMainTest.scala
devShells/chiselhdl/: .gitignore  Makefile  README.md  build.mill  flake.nix
devShells/chiselhdl/csrc/: sim_main.cpp
devShells/chiselhdl/playground/src/: Counter.scala  Elaborate.scala
devShells/clash/: .gitignore  README.md  clash-hello.cabal  flake.nix
devShells/clash/src/: Hello.hs
devShells/cpp/: .gitignore  CMakeLists.txt  README.md  flake.nix
devShells/cpp/src/: main.cpp
devShells/haskell/: .gitignore  Makefile  README.md  flake.nix  haskell-hello.cabal
devShells/python/: .gitignore  README.md  flake.nix  main.py  pyproject.toml
devShells/rust/: README.md  flake.nix
devShells/scala/: .gitignore  Makefile  README.md  build.mill  flake.nix
devShells/scala/src/: Main.scala
devShells/scala/test/src/: MainTest.scala
devShells/systemc/: .gitignore  CMakeLists.txt  README.md  flake.nix
devShells/systemc/src/: main.cpp
devShells/systemverilog/: flake.nix
hosts/matebook/: configuration.nix  hardware-configuration.nix
hosts/nixos-vm/: configuration.nix  hardware-configuration.nix
modules/: alacritty.nix  codex.nix  fastfetch.nix  fish.nix  niri.nix  nixvim.nix  starship.nix  tmux.nix  uv.nix  vim.nix
