cabal-version:       2.4
name:                clash-hello
version:             0.1.0.0
license:             BSD-3-Clause
author:              Your Name
maintainer:          your.email@example.com

common common-options
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    InstanceSigs
    KindSignatures
    LambdaCase
    NoStarIsType
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

    -- TemplateHaskell is used for derive annotations
    TemplateHaskell
    QuasiQuotes

    -- Prelude is commonly not imported in Clash, but we import Clash.Prelude
    NoImplicitPrelude

  ghc-options:
    -Wall -Wcompat
    
    -- Plugins to support type-level operations
    -fplugin GHC.TypeLits.Normalise
    -fplugin GHC.TypeLits.Extra.Solver
    -fplugin GHC.TypeLits.KnownNat.Solver

  build-depends:
    base,
    clash-prelude >= 1.6,
    ghc-typelits-natnormalise,
    ghc-typelits-extra,
    ghc-typelits-knownnat

library
  import: common-options
  hs-source-dirs: src
  exposed-modules:
    Hello
  default-language: Haskell2010
