cabal-version:       2.4
name:                haskell-hello
version:             0.1.0.0
license:             BSD-3-Clause
author:              Your Name
maintainer:          your.email@example.com
build-type:          Simple

executable haskell-hello
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Wcompat
  build-depends:       base >=4.14 && <5
